--- a/client_astro/src/pages/artists/[slug].astro
+++ b/client_astro/src/pages/artists/[slug].astro
@@ -2,12 +2,13 @@
 import fetchApi from "../../lib/strapi";
 import PrevNext from "../../components/PrevNext.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import { Image, Picture } from "astro:assets";
 
 export async function getStaticPaths() {
     const artists = await fetchApi({
         endpoint: "artists",
         wrappedByKey: "data",
-        query: { populate: ["categories", "profile_photo"] },
+        query: { populate: ["categories", "profile_photo", "stickers"] },
     });
 
     const paths = artists.map((artist, i) => ({
@@ -31,21 +32,118 @@ const { artist, prev, next } = Astro.props;
         margin-block-end: 1rem;
     }
 
-    .sticker_container {
+    .artist_container {
         margin: 2rem;
         display: grid;
         grid-template-columns: 1fr 1fr;
+        align-items: center;
+        margin-inline: 4rem;
     }
 
     .categories {
         font-size: 1.5rem;
     }
+
+    .artist_right_side {
+        justify-self: center;
+        max-width: 20rem;
+    }
+
+    .artist_left_side {
+        justify-self: center;
+    }
+
+    .artist_container {
+        background-color: #dca546;
+        padding: 2rem;
+        border-radius: 1rem;
+        color: #f4e3cf;
+    }
+
+    .category_left_side__sticker {
+        color: #ffedcd;
+        background-color: #673700a8;
+        padding: 1rem;
+        border-radius: 2rem;
+        width: fit-content;
+        height: fit-content;
+        margin-inline-end: 1rem;
+        margin-block-start: 1rem;
+    }
+
+    .artist_right_side__sticker {
+        color: #dca546;
+        background-color: #f4e3cf;
+        padding: 1rem;
+        border-radius: 2rem;
+        width: fit-content;
+        height: fit-content;
+        margin: 1rem;
+    }
+
+    .artist_right_side__sticker_div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-block-start: 2rem;
+    }
+
+    .bold {
+        font-weight: bold;
+    }
+    .artist_right_side__stickers {
+        padding-block-start: 1rem;
+    }
+
+    .artist_left_side__categories {
+        display: flex;
+        flex-direction: row;
+    }
 </style>
 
 <BaseLayout>
-    <div class="sticker_container">
-        <h2>{artist.name}</h2>
-        <p>{artist.sticker}</p>
+    <div class="artist_container">
+        <div class="artist_left_side">
+            <h2>{artist.name}</h2>
+            <Image
+                class="artist_photo"
+                src={`${import.meta.env.STRAPI_URL}${artist.profile_photo.url}`}
+                alt="sticker image"
+                width="300"
+                height="400"
+                widths={[250, 350, 500, 750]}
+                format="avif"
+                sizes="(min-width: 2960px) calc(12.5vw - 118px), (min-width: 2600px) calc(5vw + 121px), (min-width: 2240px) calc(5.29vw + 131px), (min-width: 1900px) calc(5vw + 157px), (min-width: 1540px) calc(4.71vw + 180px), (min-width: 1160px) calc(3.33vw + 217px), (min-width: 1120px) calc(325vw - 3455px), (min-width: 760px) calc(3.53vw + 229px), (min-width: 540px) calc(42vw - 43px), calc(8.18vw + 225px)"
+            />
+            <div class="artist_left_side__categories">
+                {
+                    artist.categories.map((category) => (
+                        <a href={`/categories/${category.slug}`}>
+                            <p class="category_left_side__sticker">
+                                {category.name}
+                            </p>
+                        </a>
+                    ))
+                }
+            </div>
+        </div>
+        <div class="artist_right_side">
+            <p>{artist.description}</p>
+            <div class="artist_right_side__stickers">
+                <p class="bold">Their stickers:</p>
+                <div class="artist_right_side__sticker_div">
+                    {
+                        artist.stickers.map((sticker) => (
+                            <a href={`/stickers/${sticker.slug}`}>
+                                <p class="artist_right_side__sticker">
+                                    {artist.name}
+                                </p>
+                            </a>
+                        ))
+                    }
+                </div>
+            </div>
+        </div>
     </div>
     <PrevNext prev={prev} next={next} path="artists" />
 </BaseLayout>
