--- a/client_astro/src/components/ArtistList.astro
+++ b/client_astro/src/components/ArtistList.astro
@@ -1,6 +1,7 @@
 ---
-const { artists } = Astro.props;
+const { artists, showCategory } = Astro.props;
 import { Image, Picture } from "astro:assets";
+import ArtistCard from "./ArtistCard.astro";
 ---
 
 <style>
@@ -47,10 +48,7 @@ import { Image, Picture } from "astro:assets";
         gap: 1rem;
     }
 
-    .profile-image {
-        border-radius: 50%;
-        inline-size: 7rem;
-    }
+
 
     .categories {
         margin-block-start: 0rem;
@@ -65,16 +63,9 @@ import { Image, Picture } from "astro:assets";
                 data-category={artist.categories?.map((c) => c.slug).join(" ")}
             >
                 <a class="artist_boxes__left" href={`/artists/${artist.slug}`}>
-                    <p>{artist.name}</p>
-                    <Image
-                        class="profile-image"
-                        src={`${import.meta.env.STRAPI_URL}${artist.profile_photo.url}`}
-                        alt="profile image"
-                        width="300"
-                        height="400"
-                        widths={[250, 350, 500, 750]}
-                        format="avif"
-                        sizes="(min-width: 2960px) calc(12.5vw - 118px), (min-width: 2600px) calc(5vw + 121px), (min-width: 2240px) calc(5.29vw + 131px), (min-width: 1900px) calc(5vw + 157px), (min-width: 1540px) calc(4.71vw + 180px), (min-width: 1160px) calc(3.33vw + 217px), (min-width: 1120px) calc(325vw - 3455px), (min-width: 760px) calc(3.53vw + 229px), (min-width: 540px) calc(42vw - 43px), calc(8.18vw + 225px)"
+                    <ArtistCard
+                        artist={artist}
+                        showCategory={showCategory}
                     />
                 </a>
 
