--- a/client_astro/src/pages/artists.astro
+++ b/client_astro/src/pages/artists.astro
@@ -18,5 +18,5 @@ const artists = await fetchApi({
 
 <BaseLayout>
     <Filter categories={categories} />
-    <ArtistList artists={artists} />
+    <ArtistList artists={artists} showCategory={false} />
 </BaseLayout>
