--- a/client_astro/src/components/ArtistCard.astro
+++ b/client_astro/src/components/ArtistCard.astro
@@ -5,7 +5,7 @@ import { Image, Picture } from "astro:assets";
 
 <p>{artist.name}</p>
 <Image
-    class="profile-image"
+    class="li__artist__profile_photo"
     src={`${import.meta.env.STRAPI_URL}${artist.profile_photo.url}`}
     alt="profile image"
     width="300"
@@ -14,10 +14,9 @@ import { Image, Picture } from "astro:assets";
     format="avif"
     sizes="(min-width: 2960px) calc(12.5vw - 118px), (min-width: 2600px) calc(5vw + 121px), (min-width: 2240px) calc(5.29vw + 131px), (min-width: 1900px) calc(5vw + 157px), (min-width: 1540px) calc(4.71vw + 180px), (min-width: 1160px) calc(3.33vw + 217px), (min-width: 1120px) calc(325vw - 3455px), (min-width: 760px) calc(3.53vw + 229px), (min-width: 540px) calc(42vw - 43px), calc(8.18vw + 225px)"
 />
-
 <style>
-    .profile-image {
+    .li__artist__profile_photo{
         border-radius: 50%;
-        inline-size: 7rem;
+        width: 10vw;
     }
 </style>
