--- a/client_astro/src/components/ArtistList.astro
+++ b/client_astro/src/components/ArtistList.astro
@@ -4,76 +4,22 @@ import { Image, Picture } from "astro:assets";
 import ArtistCard from "./ArtistCard.astro";
 ---
 
-<style>
-    .artist_list {
-        display: grid;
-        font-size: 2rem;
-    }
-
-    .artist_boxes {
-        padding: 3rem;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    .artist_categories {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .artist_categories > li {
-        padding-inline-start: 1rem;
-    }
-
-    a {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .categories,
-    .artist_boxes:nth-child(even) {
-        background-color: rgb(218, 167, 59);
-        color: rgb(244, 227, 207);
-        border: 0.1rem solid rgb(244, 227, 207);
-    }
-
-    .categories > span {
-        margin-inline-end: 1rem;
-    }
-
-    .artist_boxes__left {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-
-
-    .categories {
-        margin-block-start: 0rem;
-    }
-</style>
-
 <ul class="artist_list">
     {
         artists.map((artist) => (
             <li
-                class="artist_boxes"
+                class="artist_list__li"
                 data-category={artist.categories?.map((c) => c.slug).join(" ")}
             >
-                <a class="artist_boxes__left" href={`/artists/${artist.slug}`}>
-                    <ArtistCard
-                        artist={artist}
-                        showCategory={showCategory}
-                    />
+                <a class="li__artist" href={`/artists/${artist.slug}`}>
+                    <ArtistCard artist={artist} showCategory={showCategory} />
                 </a>
 
                 {artist.categories && (
-                    <ul class="artist_categories">
+                    <ul class="li__ul_categories">
                         {artist.categories.map((category) => (
                             <li>
-                                <a href={`/categories/${category.slug}`}>
+                                <a href={`/categories`}>
                                     <p class="categories">
                                         {category.slug || "None"}
                                     </p>
@@ -86,3 +32,57 @@ import ArtistCard from "./ArtistCard.astro";
         ))
     }
 </ul>
+
+<style>
+    .artist_list {
+        display: grid;
+        font-size: 2rem;
+    }
+
+    .artist_list__li {
+        padding: 3rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
+
+    .li__ul_categories {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .li__ul_categories > li {
+        padding-inline-end: 1rem;
+        padding-block-start: 1rem;
+    }
+
+    a {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .categories,
+    .artist_list__li:nth-child(even) {
+        background-color: rgb(218, 167, 59);
+        color: rgb(244, 227, 207);
+        border: 0.1rem solid rgb(244, 227, 207);
+    }
+
+    .categories > span {
+        margin-inline-end: 1rem;
+    }
+
+    .li__artist {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .categories {
+        margin-block-start: 0rem;
+    }
+</style>
