--- a/client_astro/src/components/StickerList.astro
+++ b/client_astro/src/components/StickerList.astro
@@ -3,8 +3,47 @@ import StickerCard from "./StickerCard.astro";
 const { stickers, showCategory } = Astro.props;
 ---
 
+<ul class="sticker_list">
+    {
+        stickers.map((sticker) => {
+            const firstPhrase =
+                sticker.description[0]?.children[0]?.text.split(".")[0] + ".";
+
+            return (
+                <li
+                    class="sticker_list__li"
+                    data-category={sticker.categories
+                        ?.map((c) => c.slug)
+                        .join(" ")}
+                >
+                    <a href={`/stickers/${sticker.slug}`}>
+                        <StickerCard
+                            sticker={sticker}
+                            firstPhrase={firstPhrase}
+                            showCategory={showCategory}
+                        />
+                    </a>
+                    {sticker.categories && (
+                        <ul>
+                            {sticker.categories.map((category) => (
+                                <li>
+                                    <a href={`/categories`}>
+                                        <p class="categories">
+                                            {category.slug || "None"}
+                                        </p>
+                                    </a>
+                                </li>
+                            ))}
+                        </ul>
+                    )}
+                </li>
+            );
+        })
+    }
+</ul>
+
 <style>
-    .stickerList {
+    .sticker_list {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr;
         color: rgb(218, 167, 59);
@@ -14,13 +53,13 @@ const { stickers, showCategory } = Astro.props;
     }
 
     .categories,
-    .stickerList > li:nth-child(even) {
+    .sticker_list > li:nth-child(even) {
         background-color: rgb(218, 167, 59);
         color: rgb(244, 227, 207);
         border: 0.1rem solid rgb(244, 227, 207);
     }
 
-    .sticker_boxes {
+    .sticker_list__li {
         font-size: 4rem;
         inline-size: 100%;
         block-size: 100%;
@@ -46,47 +85,3 @@ const { stickers, showCategory } = Astro.props;
         grid-row: 8/10;
     }
 </style>
-
-<ul class="stickerList">
-    {
-        stickers.map((sticker) => {
-            const firstPhrase =
-                sticker.description[0]?.children[0]?.text.split(".")[0] + ".";
-
-            const categories = sticker.categories
-                ?.map((category) => category.slug)
-                .join(" ");
-
-            return (
-                <li
-                    class="sticker_boxes"
-                    data-category={sticker.categories
-                        ?.map((c) => c.slug)
-                        .join(" ")}
-                >
-                    <a href={`/stickers/${sticker.slug}`}>
-                        <StickerCard
-                            sticker={sticker}
-                            firstPhrase={firstPhrase}
-                            showCategory={showCategory}
-                        />
-                        
-                    </a>
-                    {sticker.categories && (
-                        <ul>
-                            {sticker.categories.map((category) => (
-                                <li>
-                                    <a href={`/categories/${category.slug}`}>
-                                        <p class="categories">
-                                            {category.slug || "None"}
-                                        </p>
-                                    </a>
-                                </li>
-                            ))}
-                        </ul>
-                    )}
-                </li>
-            );
-        })
-    }
-</ul>
