--- a/client_astro/src/components/ArtistList.astro
+++ b/client_astro/src/components/ArtistList.astro
@@ -85,4 +85,8 @@ import ArtistCard from "./ArtistCard.astro";
     .categories {
         margin-block-start: 0rem;
     }
+
+    .hidden {
+        display: none;
+    }
 </style>
