--- a/client_astro/src/pages/index.astro
+++ b/client_astro/src/pages/index.astro
@@ -18,5 +18,5 @@ const categories = await fetchApi({
 
 <BaseLayout>
     <Filter categories={categories} />
-    <StickerList stickers={stickers} showCategory={false} />
+    <StickerList stickers={stickers}/>
 </BaseLayout>
